--- a/.github/workflows/arm64_graviton.yml
+++ b/.github/workflows/arm64_graviton.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           if [ "$RUNNER_OS" == "Linux" ]; then
             sudo apt update
-            sudo apt-get install -y gfortran-12 cmake ccache libtinfo5
+            sudo apt-get install -y gcc-12 gfortran-12 cmake ccache libtinfo5
           else
             echo "::error::$RUNNER_OS not supported"
             exit 1
