--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,7 +3,8 @@ include_directories(${PROJECT_BINARY_DIR})
 
 enable_language(Fortran)
 if (CMAKE_Fortran_COMPILER_ID STREQUAL GNU)
-        set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -fno-tree-vectorize")
+        set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -fno-tree-vectorize -O0")
+	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0)
 endif()
 if (CMAKE_Fortran_COMPILER_ID STREQUAL Flang)
 	set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -O2")
