--- a/.github/workflows/dynamic_arch.yml
+++ b/.github/workflows/dynamic_arch.yml
@@ -177,6 +177,7 @@ jobs:
             # Compiling with Flang 16 seems to cause test errors on machines
             # with AVX512 instructions. Revisit after MSYS2 distributes Flang 17.
             # no-avx512-flags: -DNO_AVX512=1
+            no-avx512-flags: -DCMAKE_VERBOSE_MAKEFILES=ON
           - msystem: CLANG32
             idx: int32
             target-prefix: mingw-w64-clang-i686
@@ -195,6 +196,7 @@ jobs:
             # Compiling with Flang 16 seems to cause test errors on machines
             # with AVX512 instructions. Revisit after MSYS2 distributes Flang 17.
             # no-avx512-flags: -DNO_AVX512=1
+            no-avx512-flags: -DCMAKE_VERBOSE_MAKEFILES=ON
           - msystem: UCRT64
             idx: int32
             target-prefix: mingw-w64-ucrt-x86_64
