--- a/driver/others/meson.build
+++ b/driver/others/meson.build
@@ -75,7 +75,7 @@ others_libs = []
 foreach conf : others_confs
   others_libs += [static_library(
     conf['name'],
-    conf['src'],
+    [conf['src'], config_h],
     include_directories: _inc,
     c_args: conf['c_args']
   )]
