--- a/lapack-netlib/meson.build
+++ b/lapack-netlib/meson.build
@@ -1,8 +1,8 @@
 add_languages('fortran', native: false)
 ff = meson.get_compiler('fortran')
-if ff.has_argument('-Wno-conversion')
-  add_project_arguments('-Wno-conversion', language: 'fortran')
-endif
+# if ff.has_argument('-Wno-conversion')
+#   add_project_arguments('-Wno-conversion', language: 'fortran')
+# endif
 
 lapack_major_version = 3 # soversion
 lapack_minor_version = 12
