--- a/meson.build
+++ b/meson.build
@@ -11,7 +11,7 @@
 #
 # NOTE: This is still a work in progress, the Makefiles are canonical
 project('OpenBLAS', ['c', 'fortran'],
-        default_options: ['c_std=c99', 'pkg.relocatable=true'],
+        default_options: ['c_std=c99', 'pkgconfig.relocatable=true'],
         version: '0.3.26.dev')
 
 openblas_major_version = 0 # soversion
@@ -22,6 +22,7 @@ openblas_version = f'@openblas_major_version@.@openblas_minor_version@.@openblas
 # Skip the check for valid CC
 cc = meson.get_compiler('c')
 fc = meson.get_compiler('fortran')
+cc_id = cc.get_id()
 fc_id = fc.get_id()
 
 # Common args
@@ -67,18 +68,6 @@ else
     no_affinity = false
 endif
 
-# Makefile.prebuild stuff
-# TODO: Handle cpuidemu, and the target flags
-# getarch = executable('getarch',
-#           ['getarch.c', 'cpuid.S'])
-# getarch_two = executable('getarch_2nd',
-#                          ['getarch_2nd.c'])
-# config_h = custom_target('gen_config_h',
-#                           # input: ['getarch.c'],
-#                           output: ['config.h'],
-#                           command: [getarch, '3']
-#                           )
-
 _check_prefix = []
 conf_data = configuration_data()
 is_win = host_machine.system() == 'windows' or host_machine.system() == 'cygwin'
@@ -114,18 +103,6 @@ endforeach
 
 configure_file(output : 'getarch_conf.h',
                configuration : conf_data)
-
-# run_target('generate_config_h',
-#            command: [meson.current_build_dir() + '/getarch', '1'],
-#            depends: getarch)
-
-# gch = run_command(meson.current_build_dir() + '/getarch', '1')
-# outp = gch.stdout().strip()
-
-# conf_data = configuration_data()
-# configure_file(input : meson.current_build_dir() + '/config.h',
-#   output : 'config.h',
-#   configuration : conf_data)
 
 # Makefile.system
 cpu_fam = target_machine.cpu_family()
@@ -436,6 +413,58 @@ symb_defs = {
     'cblas_?dotu_sub':  {'def': ['CBLAS', 'FORCE_USE_STACK'], 'undef': ['CONJ']},
     'cblas_?dotc_sub':  {'def': ['CBLAS', 'FORCE_USE_STACK', 'CONJ']},
 }
+
+# config.h file generation
+
+_config_1_path = meson.current_build_dir() / '_config_1.h'
+_join_files_py = '../join_files.py'
+run_command('./c_check', 'Makefile.conf', _config_1_path, cc_id, check: true)
+run_command('./f_check', 'Makefile.conf', _config_1_path, fc_id, check: true)
+
+getarch = executable('getarch', ['getarch.c', 'cpuid.S'])
+
+_config_2h = custom_target('_config_2h',
+                           output: '_config_2.h',
+                           command: [getarch, '1'],
+                           depends: [getarch],
+                           capture: true,
+                          )
+
+_config_for_getarch_2nd_h = custom_target('_config_for_getarch_2nd_h',
+                                          output: '_config_for_getarch_2nd.h',
+                                          command: [
+                                            find_program('python'),
+                                            _join_files_py,
+                                            _config_1_path,
+                                            _config_2h,
+                                          ],
+                                          depends: [_config_2h],
+                                          capture: true,
+                                         )
+
+getarch_2nd = executable('getarch_2nd',
+                         ['getarch_2nd.c', _config_for_getarch_2nd_h],
+                         c_args: ['-DGEMM_MULTITHREAD_THRESHOLD=4', '-DBUILD_WITH_MESON']
+                        )
+
+_config_3h = custom_target('_config_3h',
+                           output: '_config_3.h',
+                           command: [getarch_2nd, '1'],
+                           depends: [getarch_2nd],
+                           capture: true,
+                          )
+
+config_h = custom_target('config_h',
+                         output: 'config.h',
+                         command: [
+                           find_program('python'),
+                           _join_files_py,
+                           _config_for_getarch_2nd_h,
+                           _config_3h,
+                         ],
+                         depends: [_config_3h],
+                         capture: true,
+                        )
 
 # Ignoring other hostarch checks and conflicts for arch in BSD for now
 _inc = [include_directories('.')]
