--- a/meson.build
+++ b/meson.build
@@ -550,3 +550,7 @@ pkg.generate(_openblas,
              description: 'OpenBLAS via meson build',
              version: f'@pkg_ver@_meson',
             )
+
+if build_testing
+  subdir('utest')
+endif
